chore: fix deprecation warning in ElnFileFormatTest and enable better deprecation linter errors